--- a/components/v2/WrappedFamilyFlow/WrappedFamilyFlow.module.scss
+++ b/components/v2/WrappedFamilyFlow/WrappedFamilyFlow.module.scss
@@ -37,7 +37,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 4rem 2rem;
+  padding: 4rem 2rem 4rem 2rem;
   width: 100%;
 
   @media (max-width: 540px) {
